2.0.0 - 2013-03-12
    - Breaking change: Unbound::Query#cancel! no longer cancels the query. 
      Instead, use Unbound::Resolver#cancel_query to cancel queries. 
    - Unbound::Query#async_id will now be set to nil when the query has finished
    - Disable autoclose on the return of Context#io object. autoclose is
      bad news.

1.0.1 - 2013-03-06
    - Fix issue where the resolver couldn't keep track of in-flight queries on 
      32-bit systems. 

1.0.0 
    - Initial release